<resources>
    <string name="app_name">Assignment3</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register_check_msg">Don\'t have any account?</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="age">Age:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="phone">Phone:</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="retype_password">Re-Type password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="sign_up">Sign Up</string>
    <string name="web_url">Web url:</string>
    <string name="enter_your_web_url">Enter your web url</string>
    <string name="update_password">Update Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="website">Website</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password:</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_password">Change password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="notification">Notification</string>
    <string name="image_url">Image Url:</string>
    <string name="enter_image_url">Enter image url</string>
    <string name="enabled">enabled</string>
</resources>