<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTheme"
    tools:context=".SignUp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-196dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/name"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/age"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_age"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_age" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/phone"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/et_age" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_phone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/et_phone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_mail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/web_url"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/et_mail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_web_url"
                android:textColor="@color/textColor"
                android:inputType="textWebEditText"
                android:textColorHint="@color/hintColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_website" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_Pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/password"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/et_website" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_Pass" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reType_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/retype_password"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/et_pass" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_reType_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password_again"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_reType_pass" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/et_reType_pass" />
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/et_name"
                app:layout_constraintTop_toTopOf="@id/tv_gender">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"
                    android:textSize="22sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/textColor"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="22sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/textColor" />
            </RadioGroup>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/radio_group"
                android:layout_marginTop="30dp"
                android:text="@string/notification"
                android:textColor="@color/textColor"
                android:textSize="22sp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_notificationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_notification"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="15dp"/>
            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_notificationValue"
                app:layout_constraintBottom_toBottomOf="@id/tv_notificationValue"/>


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/custombutton"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_notificationValue">

            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>