<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTheme"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/sigbatursbd"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:textColor="@color/textColor"
        android:text="@string/email"
        android:textSize="22sp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toTopOf="@id/tv_email"
        app:layout_constraintBottom_toBottomOf="@id/tv_email"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/password"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginTop="20dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintStart_toEndOf="@id/tv_password"
        app:layout_constraintTop_toTopOf="@id/tv_password"
        app:layout_constraintBottom_toBottomOf="@id/tv_password"
        android:layout_marginStart="02dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:background="@drawable/custombutton"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        android:text="@string/register_check_msg"
        android:layout_marginTop="30dp"
        android:textColor="@color/textColor"
        android:textSize="22sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/tv_register_check"
        android:background="@drawable/custombutton"
        android:textSize="22sp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_margin="10dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>