<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePassword"
    android:background="@color/backgroundTheme"
    android:paddingVertical="90dp"
    android:paddingHorizontal="40dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/old_password"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_oldPassword"
        android:text="@string/new_password"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_confirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_newPassword"
        android:text="@string/confirm_new_password"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_oldPassword"
        android:hint="@string/enter_your_old_password"
        android:textSize="22sp"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_newPassword"
        android:hint="@string/enter_new_password"
        android:textSize="22sp"
        android:textColor="@color/textColor"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_confirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_confirmNewPassword"
        android:hint="@string/confirm_new_password"
        android:textSize="22sp"
        android:textColor="@color/textColor"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_updatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:padding="10dp"
        android:background="@drawable/custombutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirmNewPassword"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>